--- a/javaScript/monthlyproject/v1/package.json
+++ b/javaScript/monthlyproject/v1/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
-    "nodemon": "^3.1.3"
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.3",
+    "prisma": "^5.15.1"
   }
 }
